Fixed issue with leaving pipes open which could be seen using lsof -p <PID>